# Computational_Geometry

./: README.md
taller 1/: CMakeLists.txt  ConvexHull.h  ConvexHull.hxx  experiment.cxx
